[package]
name = "prost-build-config"
version = "0.6.1"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/prost-build-config"
repository = "https://github.com/tyrchen/prost-helper"
homepage = "https://github.com/tyrchen/prost-helper"
description = """
A prost toolkit to build protobuf with extra derive/attrs support.
"""
readme = "../README.md"
categories = ["development-tools::build-utils"]
keywords = ["protobuf", "prost", "serde", "derive"]

[dependencies]
prost-build = { version = "0.12.3", features = ["prettyplease"] }
serde = { version = "1.0.193", features = ["derive"] }

[dev-dependencies]
serde_yaml = "0.9.27"
prost-helper = { version = "0.8.0", path = "../prost-helper" }
