[package]
name = "prost-helper"
version = "0.1.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
num-traits = "0.2"
prost = "0.7"
serde = { version = "1", features = ["derive"] }
