[package]
name = "prost-helper"
version = "0.2.1"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/prost-helper"
repository = "https://github.com/tyrchen/prost-helper"
homepage = "https://github.com/tyrchen/prost-helper"
description = """
A set of prost helper functions to make prost generated code easy to work with.
"""
readme = "../README.md"
categories = ["development-tools"]
keywords = ["protobuf", "prost", "serde"]

[dependencies]
bytes = "1"
num-traits = "0.2"
prost = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }

[features]
default = []
json = ["serde_json"]
