[package]
name = "prost-helper"
version = "0.8.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/prost-helper"
repository = "https://github.com/tyrchen/prost-helper"
homepage = "https://github.com/tyrchen/prost-helper"
description = """
A set of prost helper functions to make prost generated code easy to work with.
"""
readme = "../README.md"
categories = ["development-tools"]
keywords = ["protobuf", "prost", "serde"]

[dependencies]
bytes = "1.5.0"
num-traits = "0.2.17"
prost = "0.12.3"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.108", optional = true }
base64 = { version = "0.21.5", optional = true }

[features]
default = ["json", "b64"]
json = ["serde_json"]
b64 = ["base64"]
