[package]
name = "prost-serde"
version = "0.1.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost-build = "0.7"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
prost-helper = { path = "../prost-helper" }
