[package]
name = "prost-serde"
version = "0.1.0"
authors = ["Tyr Chen <tyr.chen@gmail.com>"]
edition = "2018"
license = "MIT"
documentation = "https://docs.rs/prost-serde/0.1.0/prost_serde/"
repository = "https://github.com/tyrchen/prost-helper"
homepage = "https://github.com/tyrchen/prost-helper"
description = """
A prost toolkit to build protobuf with serde support.
"""
readme = "../README.md"
categories = ["tool"]
keywords = ["protobuf", "prost", "serde"]

[dependencies]
prost-build = "0.7"
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
# prost-helper = "0.1"
